--- a/assignment_1/src/code_vis_ass1.ipynb
+++ b/assignment_1/src/code_vis_ass1.ipynb
@@ -135,141 +135,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "       Filename     Distance\n",
-      "0    image_0001      0.00000\n",
-      "1    image_0002   6650.67341\n",
-      "2    image_0003  14397.71778\n",
-      "3    image_0004    196.45550\n",
-      "4    image_0005   9006.81127\n",
-      "..          ...          ...\n",
-      "964  image_1353    317.42685\n",
-      "965  image_1354   5699.51136\n",
-      "966  image_1355   6108.86408\n",
-      "967  image_1357    210.26631\n",
-      "968  image_1359   1227.66979\n",
-      "\n",
-      "[969 rows x 2 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Initialize a pandas dataframe with specified column names\n",
-    "distance_df = pd.DataFrame(columns=(\"Filename\", \"Distance\"))\n",
-    "\n",
-    "# Define a function to update the df with new distances\n",
-    "def update_distance_df(filename, distance):\n",
-    "    distance_df.loc[len(distance_df.index)] = [filename, distance] \n",
-    "\n",
-    "#LAURAS\n",
-    "for file in sorted(os.listdir(filepath_f)):\n",
-    "    filepath_fx = os.path.join(filepath_f, file)\n",
-    "    image_fx = cv2.imread(filepath_fx)\n",
-    "    filename_fx = file.split(\".jpg\")[0]\n",
-    "    hist_fx = cv2.calcHist([image_fx], channels = [0,1,2], mask = None, histSize = [255,255,255], ranges = [0,256, 0,256,0,256])\n",
-    "    norm_hist_fx = cv2.normalize(hist_fx, hist_fx, 0, 1.0, cv2.NORM_MINMAX)\n",
-    "    dist_fx = round(cv2.compareHist(norm_hist_f1, norm_hist_fx, cv2.HISTCMP_CHISQR),5)\n",
-    "\n",
-    "    if len(distance_df) < 6: \n",
-    "        # If there is less than give images appended to the df, simply append the information\n",
-    "        update_distance_df(filename_fx, dist_fx)\n",
-    "    else:\n",
-    "        # Find image with the highest distance value in the df - so the one that are least similar\n",
-    "        # pd .idxmax() function returns the index with the maximum value\n",
-    "        max_dist_idx = distance_df['Distance'].idxmax()\n",
-    "\n",
-    "        # If the dist of the new image is smaller than the max distance in df, then...\n",
-    "        if dist_fx < distance_df.loc[max_dist_idx, 'Distance']:\n",
-    "            # Drop the row with the max value \n",
-    "            distance_df = distance_df.drop(index = max_dist_idx)\n",
-    "            # Append the image name and distance value\n",
-    "            update_distance_df(filename_fx, dist_fx, )\n",
-    "            \n",
-    "    # Specify path to the output folder and name of the specific .csv file\n",
-    "    #csv_outpath = os.path.join(\"..\", \"out\", \"table.csv\")\n",
-    "\n",
-    "#distance_df.to_csv(csv_outpath)  \n",
-    "print(distance_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "update_distance_df() takes 2 positional arguments but 3 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/work/IdaHeleneDencker#2808/CDS_visual/CDS_vis24/assignments/src/code_vis_ass1.ipynb Cell 12\u001b[0m line \u001b[0;36m1\n\u001b[1;32m     <a href='vscode-notebook-cell://app-5021468-0.cloud.sdu.dk/work/IdaHeleneDencker%232808/CDS_visual/CDS_vis24/assignments/src/code_vis_ass1.ipynb#X35sdnNjb2RlLXJlbW90ZQ%3D%3D?line=9'>10</a>\u001b[0m dist_fx \u001b[39m=\u001b[39m \u001b[39mround\u001b[39m(cv2\u001b[39m.\u001b[39mcompareHist(norm_hist_f1, norm_hist_fx, cv2\u001b[39m.\u001b[39mHISTCMP_CHISQR),\u001b[39m5\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell://app-5021468-0.cloud.sdu.dk/work/IdaHeleneDencker%232808/CDS_visual/CDS_vis24/assignments/src/code_vis_ass1.ipynb#X35sdnNjb2RlLXJlbW90ZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(distance_df) \u001b[39m<\u001b[39m \u001b[39m7\u001b[39m: \n\u001b[1;32m     <a href='vscode-notebook-cell://app-5021468-0.cloud.sdu.dk/work/IdaHeleneDencker%232808/CDS_visual/CDS_vis24/assignments/src/code_vis_ass1.ipynb#X35sdnNjb2RlLXJlbW90ZQ%3D%3D?line=12'>13</a>\u001b[0m     \u001b[39m# If there is less than give images appended to the df, simply append the information\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell://app-5021468-0.cloud.sdu.dk/work/IdaHeleneDencker%232808/CDS_visual/CDS_vis24/assignments/src/code_vis_ass1.ipynb#X35sdnNjb2RlLXJlbW90ZQ%3D%3D?line=13'>14</a>\u001b[0m     update_distance_df(filename_fx, dist_fx, distance_df)\n\u001b[1;32m     <a href='vscode-notebook-cell://app-5021468-0.cloud.sdu.dk/work/IdaHeleneDencker%232808/CDS_visual/CDS_vis24/assignments/src/code_vis_ass1.ipynb#X35sdnNjb2RlLXJlbW90ZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     <a href='vscode-notebook-cell://app-5021468-0.cloud.sdu.dk/work/IdaHeleneDencker%232808/CDS_visual/CDS_vis24/assignments/src/code_vis_ass1.ipynb#X35sdnNjb2RlLXJlbW90ZQ%3D%3D?line=15'>16</a>\u001b[0m     \u001b[39m# Find image with the highest distance value in the df - so the one that are least similar\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://app-5021468-0.cloud.sdu.dk/work/IdaHeleneDencker%232808/CDS_visual/CDS_vis24/assignments/src/code_vis_ass1.ipynb#X35sdnNjb2RlLXJlbW90ZQ%3D%3D?line=16'>17</a>\u001b[0m     \u001b[39m# pd .idxmax() function returns the index with the maximum value\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://app-5021468-0.cloud.sdu.dk/work/IdaHeleneDencker%232808/CDS_visual/CDS_vis24/assignments/src/code_vis_ass1.ipynb#X35sdnNjb2RlLXJlbW90ZQ%3D%3D?line=17'>18</a>\u001b[0m     max_dist_idx \u001b[39m=\u001b[39m distance_df[\u001b[39m'\u001b[39m\u001b[39mDistance\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39midxmax()\n",
-      "\u001b[0;31mTypeError\u001b[0m: update_distance_df() takes 2 positional arguments but 3 were given"
-     ]
-    }
-   ],
-   "source": [
-    "distance_df = pd.DataFrame(columns=(\"Filename\", \"Distance\"))\n",
-    "\n",
-    "for file in sorted(os.listdir(filepath_f)):\n",
-    "    filepath_fx = os.path.join(filepath_f, file)\n",
-    "    image_fx = cv2.imread(filepath_fx)\n",
-    "    filename_fx = file.split(\".jpg\")[0]\n",
-    "    hist_fx = cv2.calcHist([image_fx], channels = [0,1,2], mask = None, histSize = [255,255,255], ranges = [0,256, 0,256,0,256])\n",
-    "    norm_hist_fx = cv2.normalize(hist_fx, hist_fx, 0, 1.0, cv2.NORM_MINMAX)\n",
-    "\n",
-    "    dist_fx = round(cv2.compareHist(norm_hist_f1, norm_hist_fx, cv2.HISTCMP_CHISQR),5)\n",
-    "\n",
-    "    if len(distance_df) < 7: \n",
-    "        # If there is less than give images appended to the df, simply append the information\n",
-    "        update_distance_df(filename_fx, dist_fx, distance_df)\n",
-    "    else:\n",
-    "        # Find image with the highest distance value in the df - so the one that are least similar\n",
-    "        # pd .idxmax() function returns the index with the maximum value\n",
-    "        max_dist_idx = distance_df['Distance'].idxmax()\n",
-    "\n",
-    "        max_dist = distance_df.loc[max_dist_idx, 'Distance']\n",
-    "\n",
-    "        # If the dist of the new image is smaller than the max distance in df, then...\n",
-    "        if dist_fx < max_dist:\n",
-    "            # Drop the row with the max value \n",
-    "            distance_df = distance_df.drop(index = max_dist_idx)\n",
-    "            # Append the image name and distance value\n",
-    "            update_distance_df(filename_fx, dist_fx, distance_df)\n",
-    "    \n",
-    "print(distance_df)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Define dataframe to put the distances and filenames in\n",
+    "# Define dataframe to put the distances and filenames in\n",
     "distances_all = pd.DataFrame(columns= (\"Filename\", \"Distance\"))\n",
     "\n",
-    "#loop through all files\n",
+    "# Loop through all files\n",
     "for file in sorted(os.listdir(filepath_f)):\n",
     "        filepath_fx = os.path.join(filepath_f, file)\n",
-    "        image_fx = cv2.imread(filepath_fx) #read in file\n",
+    "        image_fx = cv2.imread(filepath_fx) # Read in file\n",
     "        filename_fx = file.split(\".jpg\")[0] \n",
-    "        hist_fx = cv2.calcHist([image_fx], channels = [0,1,2], mask = None, histSize = [255,255,255], ranges = [0,256, 0,256,0,256]) #extract color histogram\n",
-    "        norm_hist_fx = cv2.normalize(hist_fx, hist_fx, 0, 1.0, cv2.NORM_MINMAX) #normalize\n",
-    "        dist_fx = round(cv2.compareHist(norm_hist_f1, norm_hist_fx, cv2.HISTCMP_CHISQR),5) #compare to the original flower \n",
-    "        \n",
+    "        hist_fx = cv2.calcHist([image_fx], channels = [0,1,2], mask = None, histSize = [255,255,255], ranges = [0,256, 0,256,0,256]) # Extract color histogram\n",
+    "        norm_hist_fx = cv2.normalize(hist_fx, hist_fx, 0, 1.0, cv2.NORM_MINMAX) # Normalize\n",
+    "        dist_fx = round(cv2.compareHist(norm_hist_f1, norm_hist_fx, cv2.HISTCMP_CHISQR),5) # Compare to the original flower \n",
     "        row_fx = [filename_fx, dist_fx]\n",
     "        distances_all.loc[len(distances_all)] = row_fx\n",
-    "final_df=(distances_all.nsmallest(6, [\"Distance\"])) #take the 5 nearest distances and save in df\n",
+    "final_df=(distances_all.nsmallest(6, [\"Distance\"])) # Take the 5 nearest distances and save in df\n",
     "csv_filename = \"../out/metrics_data.csv\"\n",
-    "final_df.to_csv(csv_filename, index=False) #save it in the out folder"
+    "final_df.to_csv(csv_filename, index=False) # Save it in the out folder"
    ]
   }
  ],
