progress, report correct

--- a/assignment_2/src/log.ipynb
+++ b/assignment_2/src/log.ipynb
@@ -96,21 +96,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-03-11 15:25:43.134918: I external/local_tsl/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-03-11 15:25:43.139551: I external/local_tsl/tsl/cuda/cudart_stub.cc:32] Could not find cuda drivers on your machine, GPU will not be used.\n",
-      "2024-03-11 15:25:43.198173: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX512F FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-03-11 15:25:44.213073: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tensorflow.keras.datasets import cifar10\n",
     "(X_train, y_train), (X_test, y_test) = cifar10.load_data()"
@@ -118,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +421,7 @@
        "         [163, 163, 161]]]], dtype=uint8)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +442,7 @@
        "(50000, 32, 32, 3)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,34 +460,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(10000, 1024)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "done_list_train = []\n",
     "\n",
     "for picture in X_train:\n",
     "    greyscaled= cv2.cvtColor(picture, cv2.COLOR_BGR2GRAY) #grayscaling, shape is now: 32x32\n",
     "    normalized = greyscaled/255.0 #normalize greyscale, shape is now: 32x32\n",
-    "    reshaped = normalized.reshape(-1, 1024) #reshape the nornalized image, shape is now 1x1024 ??\n",
-    "    #the first argument is the array to be reshaped, here -1 (last element), 1024 is the new shape\n",
-    "    done_list_train.append(reshaped) #append to the empty list\n",
-    "\n",
-    "X_train=np.concatenate( done_list_train, axis=0 )\n",
-    "#X_train= np.array(done_list_train) #make into array and name back to X_train\n",
-    "X_train.shape\n",
-    "#X_train= np.squeeze(X_train)\n",
+    "    done_list_train.append(normalized) #normalize greyscale, shape is now: 32x32\n",
+    "X_train=np.array(done_list_train)\n",
+    "X_train_reshaped = X_train.reshape(-1,1024)\n",
+    "X_train = X_train_reshaped\n",
     "\n",
     "\n",
     "done_list_test = []\n",
@@ -507,164 +480,30 @@
     "for picture in X_test:\n",
     "    greyscaled= cv2.cvtColor(picture, cv2.COLOR_BGR2GRAY) #grayscaling\n",
     "    normalized = greyscaled/255.0 #normalize greyscale here\n",
-    "    reshaped = normalized.reshape(-1, 1024) #reshape the nornalized image here\n",
-    "    done_list_test.append(reshaped)\n",
-    "#X_test= np.array(done_list_test)\n",
-    "X_test=np.concatenate( done_list_test, axis=0 )\n",
-    "X_test.shape\n",
-    "#X_test= np.squeeze(X_test)\n"
+    "    done_list_test.append(normalized)\n",
+    "X_test=np.array(done_list_test)\n",
+    "X_test_reshaped = X_test.reshape(-1,1024)\n",
+    "X_test = X_test_reshaped"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train= np.squeeze(X_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.38431373, 0.38039216, 0.4       , ..., 0.33333333, 0.36078431,\n",
-       "        0.29411765],\n",
-       "       [0.92156863, 0.90588235, 0.90980392, ..., 0.70588235, 0.75294118,\n",
-       "        0.77647059],\n",
-       "       [0.76862745, 0.75686275, 0.67058824, ..., 0.02352941, 0.01568627,\n",
-       "        0.03137255],\n",
-       "       ...,\n",
-       "       [0.05882353, 0.05490196, 0.05098039, ..., 0.12156863, 0.1254902 ,\n",
-       "        0.11372549],\n",
-       "       [0.11764706, 0.09411765, 0.1254902 , ..., 0.41960784, 0.41960784,\n",
-       "        0.41176471],\n",
-       "       [0.30196078, 0.41176471, 0.42352941, ..., 0.42745098, 0.24705882,\n",
-       "        0.10196078]])"
+       "(50000, 1024)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(50000, 1024)\n"
-     ]
-    }
-   ],
-   "source": [
-    "done_list_train = []\n",
-    "\n",
-    "for picture in X_train:\n",
-    "    greyscaled= cv2.cvtColor(picture, cv2.COLOR_BGR2GRAY) #grayscaling, shape is now: 32x32\n",
-    "    normalized = greyscaled/255.0 #normalize greyscale, shape is now: 32x32\n",
-    "    reshaped = normalized.reshape(-1, 1024) #reshape the nornalized image, shape is now 1x1024 ??\n",
-    "    #the first argument is the array to be reshaped, here -1 (last element), 1024 is the new shape\n",
-    "    done_list_train.append(reshaped) #append to the empty list\n",
-    "X_train= np.array(done_list_train) #make into array and name back to X_train\n",
-    "X_train.shape\n",
-    "\n",
-    "x = np.zeros( (X_train.shape[0], X_train.shape[1], X_train.shape[2]) )\n",
-    "X_train = x[:, 0, :]\n",
-    "print(X_train.shape)\n",
-    "\n",
-    "#X_train = np.zeros( (X_train.shape[0], X_train.shape[1], X_train.shape[2]) )\n",
-    "#X_train = X_train[:, 0, :]\n",
-    "#print(X_train.shape)\n",
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.24313725, 0.17647059, 0.18431373, ..., 0.68235294, 0.43921569,\n",
-       "        0.35294118],\n",
-       "       [0.69411765, 0.52941176, 0.39607843, ..., 0.53333333, 0.5372549 ,\n",
-       "        0.5372549 ],\n",
-       "       [1.        , 0.99215686, 0.99215686, ..., 0.32941176, 0.32941176,\n",
-       "        0.33333333],\n",
-       "       ...,\n",
-       "       [0.70196078, 0.70196078, 0.70588235, ..., 0.22352941, 0.18431373,\n",
-       "        0.1372549 ],\n",
-       "       [0.85098039, 0.83921569, 0.83529412, ..., 0.70980392, 0.72156863,\n",
-       "        0.7254902 ],\n",
-       "       [0.90980392, 0.94117647, 0.9372549 , ..., 0.69019608, 0.63921569,\n",
-       "        0.63529412]])"
-      ]
-     },
-     "execution_count": 121,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "done_list_test = []\n",
-    "\n",
-    "for picture in X_test:\n",
-    "    greyscaled= cv2.cvtColor(picture, cv2.COLOR_BGR2GRAY) #grayscaling\n",
-    "    normalized = greyscaled/255.0 #normalize greyscale here\n",
-    "    reshaped = normalized.reshape(-1, 1024) #reshape the nornalized image here\n",
-    "    done_list_test.append(reshaped)\n",
-    "X_test= np.array(done_list_test)\n",
-    "X_test.shape\n",
-    "\n",
-    "X_test = np.zeros( (X_test.shape[0], X_test.shape[1], X_test.shape[2]) )\n",
-    "X_test = X_test[:, 0, :]\n",
-    "print(X_test.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.30196078, 0.41176471, 0.42352941, ..., 0.42745098, 0.24705882,\n",
-       "        0.10196078]])"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "reshaped"
+    "X_train.shape"
    ]
   },
   {
@@ -676,90 +515,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "numpy.ndarray"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(50000, 1)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_train.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unhashable type: 'numpy.ndarray'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/work/IdaHeleneDencker#2808/CDS_visual/CDS_vis24/assignment_2/src/log.ipynb Cell 16\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://app-5026076-0.cloud.sdu.dk/work/IdaHeleneDencker%232808/CDS_visual/CDS_vis24/assignment_2/src/log.ipynb#X55sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m classes \u001b[39m=\u001b[39m \u001b[39msorted\u001b[39m(\u001b[39mset\u001b[39;49m(y_test))\n\u001b[1;32m      <a href='vscode-notebook-cell://app-5026076-0.cloud.sdu.dk/work/IdaHeleneDencker%232808/CDS_visual/CDS_vis24/assignment_2/src/log.ipynb#X55sdnNjb2RlLXJlbW90ZQ%3D%3D?line=1'>2</a>\u001b[0m nclasses \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(classes)\n",
-      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'numpy.ndarray'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ucloud/.local/lib/python3.10/site-packages/sklearn/utils/validation.py:1300: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
+      "  y = column_or_1d(y, warn=True)\n"
      ]
     }
    ],
    "source": [
-    "classes = sorted(set(y_test))\n",
-    "nclasses = len(classes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#Define classifier and fit \n",
-    "\n",
     "classifier = LogisticRegression(tol = 0.1,\n",
     "                                    solver = 'saga',\n",
     "                                    multi_class = 'multinomial',\n",
     "                                    random_state = 123)\n",
     "\n",
-    "model = classifier.fit(X_train, np.ravel(y_train))\n",
-    "\n",
-    "#model = forest.fit(train_fold, train_y.values.ravel())\n"
+    "model = classifier.fit(X_train, y_train)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -770,53 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(50000, 1024)"
-      ]
-     },
-     "execution_count": 123,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[6],\n",
-       "       [9],\n",
-       "       [9],\n",
-       "       ...,\n",
-       "       [9],\n",
-       "       [1],\n",
-       "       [1]], dtype=uint8)"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_train"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -825,58 +555,30 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "    airplane       0.00      0.00      0.00         0\n",
-      "  automobile       0.00      0.00      0.00         0\n",
-      "        bird       0.00      0.00      0.00         0\n",
-      "         cat       0.00      0.00      0.00         0\n",
-      "        deer       0.00      0.00      0.00         0\n",
-      "         dog       0.00      0.00      0.00         0\n",
-      "        frog       0.00      0.00      0.00         0\n",
-      "       horse       0.00      0.00      0.00         0\n",
-      "        ship       0.00      0.00      0.00         0\n",
-      "       truck       0.00      0.00      0.00         0\n",
+      "    airplane       0.33      0.41      0.37      1000\n",
+      "  automobile       0.38      0.37      0.38      1000\n",
+      "        bird       0.27      0.21      0.24      1000\n",
+      "         cat       0.22      0.17      0.19      1000\n",
+      "        deer       0.25      0.19      0.22      1000\n",
+      "         dog       0.31      0.29      0.30      1000\n",
+      "        frog       0.29      0.33      0.31      1000\n",
+      "       horse       0.31      0.31      0.31      1000\n",
+      "        ship       0.34      0.39      0.36      1000\n",
+      "       truck       0.38      0.47      0.42      1000\n",
       "\n",
-      "   micro avg       0.00      0.00      0.00         0\n",
-      "   macro avg       0.00      0.00      0.00         0\n",
-      "weighted avg       0.00      0.00      0.00         0\n",
+      "    accuracy                           0.32     10000\n",
+      "   macro avg       0.31      0.32      0.31     10000\n",
+      "weighted avg       0.31      0.32      0.31     10000\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ucloud/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/home/ucloud/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1509: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/home/ucloud/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1509: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no true nor predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/home/ucloud/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/home/ucloud/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1509: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 due to no true samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/home/ucloud/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1509: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 due to no true nor predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/home/ucloud/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/home/ucloud/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1509: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/home/ucloud/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1509: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no true nor predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/home/ucloud/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/home/ucloud/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1509: UndefinedMetricWarning: Recall is ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
-      "/home/ucloud/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1509: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no true nor predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
      ]
     }
    ],
    "source": [
     "y_pred = model.predict(X_test)\n",
     "\n",
-    "classifier_metrics = metrics.classification_report(np.ravel(y_test), y_pred, labels=[\"airplane\", \"automobile\", \"bird\",\"cat\",\"deer\",\"dog\",\"frog\",\"horse\",\"ship\",\"truck\"])\n",
+    "target_names =[\"airplane\", \"automobile\", \"bird\",\"cat\",\"deer\",\"dog\",\"frog\",\"horse\",\"ship\",\"truck\"]\n",
+    "\n",
+    "classifier_metrics = metrics.classification_report(y_test, y_pred, target_names=target_names)\n",
     "print(classifier_metrics)\n"
    ]
   }
