adding tweaking notes for session 8

--- a/nbs/session8_inclass_rdkm.ipynb
+++ b/nbs/session8_inclass_rdkm.ipynb
@@ -1262,6 +1262,39 @@
     "                            predictions.argmax(axis=1),\n",
     "                            target_names=label_names))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Experiments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before doing the experiments, the ShallowNet (with 20 epochs, 32 batch size, learning rate .001) returns an accuracy score of 47%.\n",
+    "\n",
+    "When tweaking only 1 thing is changed at a time (holding all other parameters stable), so we are able to compare across models:\n",
+    "\n",
+    "1. Impact of normalizing the images\n",
+    "-   we tried to run the ShallowNet without normalizing the images. This resulted in worse accuracy (40%).\n",
+    "-   Also, the model overfits to a great extend and does not learn very well. When the train_loss decreases pr epoch, the validate_loss increases.\n",
+    "-   Shows how normalization is a very important pre-processing step. This could be because, that the data will not be in the \"same range / format\". Therefore, it will be more difficult for the model to learn during training.\n",
+    "- When the data is normalized, all the data will be in the range of 0 and 255 (1?). Therefore, the significant features in the data might \"stand out more\" and therefore, it will be easier for the model to learn them.\n",
+    "\n",
+    "2. Learning rate (.01)\n",
+    "-   Way more prone to overfitting, as the model doesn't have time to learn!\n",
+    "-   Better accuracy 58% \n",
+    "\n",
+    "3. Change activation function from ReLU to Sigmoid\n",
+    "-   (ReLU is the most used avtivation function for NN and CNN)\n",
+    "-   Accuracy of 32%, so significantly worse than the \"original\" testing\n",
+    "-   The plot looks good and the model does not overfit (which is similar to the first)\n",
+    "\n",
+    "= All in all, the original model is better!"
+   ]
   }
  ],
  "metadata": {
