--- a/nbs/session9_inclass_rdkm.ipynb
+++ b/nbs/session9_inclass_rdkm.ipynb
@@ -128,7 +128,7 @@
    "outputs": [],
    "source": [
     "# load the model\n",
-    "model = VGG16()"
+    "model = VGG16() "
    ]
   },
   {
@@ -575,6 +575,11 @@
    },
    "outputs": [],
    "source": [
+    "#no batch normalization: Ida \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "# add new classifier layers\n",
     "flat1 = Flatten()(model.layers[-1].output)\n",
     "class1 = Dense(128, activation='relu')(flat1) #appending\n",
